grammar.js
    source_file: $ => choice(
      $.runnable_file,
      $.unit_file,
      repeat($.statement),
      repeat($.declaration)
    ),

    runnable_file: $ => seq(
      $.file_header,
      repeat($.declaration),
      field('body', choice($.block_statement, $.asm_statement)),
      '.',
    ),

    unit_file: $ => seq(
      $.file_header,
      repeat($.declaration),
      repeat($.section),
      kw('end'),
      '.',
    ),

    file_header: $ => seq(
      field('file_type', choice(kw('unit'), kw('program'), kw('library'), kw('package'))),
      field('name', $._name),
      optional(seq(kw('deprecated'), field('message', $.compound_string_literal))),
      ';'
    ),

    section: $ => seq(
      field('kind', choice(
        kw('interface'),
        kw('implementation'),
        kw('initialization'),
        kw('finalization')
      )),
      choice(repeat($.declaration), repeat($.statement)),
    ),

    _attributes: $ => repeat1($.attribute_list),

    declaration_section: $ => choice(
      $._type_declaration_section,
      $._value_declaration_section
    ),

    _type_declaration_section: $ => seq(
      field('kind', kw('type')),
      repeat($.type_declaration)
    ),

    _value_declaration_section: $ => seq(
      optional(kw('class')),
      field('kind', choice(
        kw('var'),
        kw('threadvar'),
        kw('const'),
        kw('resourcestring')
      )),
      repeat($.global_declaration),
    ),

    global_declaration: $ => seq(
      optional($._attributes),
      commaSep1($._identifier),
      optional($._type_declaration),
      optional(seq(
        '=',
        $._section_value,
      )),
      optional($.absolute_declaration),
      repeat($.hint_directive),
      optional(';')
    ),

    _section_value: $ => prec(1, choice(
      $._type_definition,
      $.expression
    )),

    set_range: $ => prec.left(PREC.RANGE, seq(
      field('intial', $.expression),
      '..',
      field('final', $.expression),
    )),

    with_statement: $ => seq(
      kw('with'),
      commaSep1($.expression),
      kw('do'),
      optional($.statement),
      optional(';')
    ),

    raise_statement: $ => seq(
      kw('raise'),
      optional($.expression),
      optional(seq(kw('at'), $.expression)),
      optional(';')
    ),

    if_statement: $ => prec.right(seq(
      kw('if'),
      field('condition', $.expression),
      kw('then'),
      field('then', optional($.statement)),
      optional(seq(
        kw('else'),
        optional(field('else', $.statement)),
      )),
      optional(';')
    )),

    case_statement: $ => seq(
      kw('case'),
      field('value', $.expression),
      kw('of'),
      repeat($.case_branch),
      optional(seq(
        kw('else'),
        optional(alias(repeat($.statement), $.else_statements)),
      )),
      kw('end'),
      optional(';')
    ),

    case_branch: $ => seq(
      field('pattern', commaSep1($.case_pattern)),
      ':',
      field('body', optional($.statement)),
    ),

    case_pattern: $ => choice(
      $.expression,
    ),

    assignment_statement: $ => seq(
      field('left', $.lvalue_expression),
      ':=',
      field('right', $.expression),
      optional(';')
    ),

    variable_declaration_statement: $ => seq(
      choice(kw('var'), kw('const')),
      choice(
        seq(
          $.variable_declarator,
          choice(
            seq($._type_declaration, optional($._variable_initialization)),
            $._variable_initialization,
          )
        ),
        seq(
          commaSep1($.variable_declarator),
          $._type_declaration
        )
      ),
      optional(';')
    ),

    _type_declaration: $ => seq(":", field('type', $.type)),
    _variable_initialization: $ => seq(choice(':=', '='), field('initial_value', $.expression)),

    variable_declarator: $ =>
      field("name", $._identifier),

    block_statement: $ => seq(
      kw('begin'),
      repeat($.statement),
      kw('end'),
      optional(';')
    ),

    for_numeric_statement: $ => seq(
      kw('for'),
      field('variable', $._for_variable),
      ':=',
      field('initial_value', $.expression),
      field('direction', choice(kw('to'), kw('downto'))),
      field('final_value', $.expression),
      kw('do'),
      field('body', optional($.statement)),
      optional(';')
    ),

    for_each_statement: $ => seq(
      kw('for'),
      field('variable', $._for_variable),
      kw('in'),
      field('collection', $.expression),
      kw('do'),
      field('body', optional($.statement)),
      optional(';')
    ),

    _for_variable: $ => choice(
      $._identifier,
      alias($.for_variable_declaration, $.variable_declaration)
    ),

    while_statement: $ => seq(
      kw('while'),
      field('condition', $.expression),
      kw('do'),
      field('body', optional($.statement)),
      optional(';')
    ),

    repeat_statement: $ => seq(
      kw('repeat'),
      repeat($.statement),  // last statement before 'until' needs no semicolon
      kw('until'),
      field('condition', $.expression),
      optional(';')
    ),

    try_except_statement: $ => seq(
      kw('try'),
      alias(repeat($.statement), $.try_statements),
      kw('except'),
      choice(
        // typed handlers: on E: Exception do ...
        seq(
          repeat1($.exception_handler),
          optional(seq(kw('else'), alias(repeat($.statement), $.except_else_statements))),
        ),
        // bare except: just statements
        seq(
          alias(repeat($.statement), $.except_statements)
        ),
      ),
      kw('end'),
      optional(';')
    ),

    exception_handler: $ => seq(
      kw('on'),
      optional(seq(field('variable', $._identifier), ':')),
      field('type', $._name),
      kw('do'),
      field('body', optional($.statement)),
    ),

    try_finally_statement: $ => seq(
      kw('try'),
      alias(repeat($.statement), $.try_statements),
      kw('finally'),
      alias(repeat($.statement), $.finally_statements),
      kw('end'),
      optional(';')
    ),

    continue_statement: $ => seq(
      kw('continue'),
      optional(';')
    ),

    break_statement: $ => seq(
      kw('break'),
      optional(';')
    ),

    exit_statement: $ => seq(
      kw('exit'),
      optional($.argument_list),
      optional(';')
    ),

    unary_expression: $ => prec(PREC.UNARY, seq(
      field('operator', choice('+', '-', kw('not'))),
      field('operand', $.expression),
    )),

    binary_expression: $ => {
      /** @type {Array<[string|Rule, number]>} */
      const table = [
        ['*', PREC.MULTIPLICATIVE],
        ['/', PREC.MULTIPLICATIVE],
        [kw('div'), PREC.MULTIPLICATIVE],
        [kw('mod'), PREC.MULTIPLICATIVE],
        [kw('and'), PREC.MULTIPLICATIVE],
        [kw('shl'), PREC.MULTIPLICATIVE],
        [kw('shr'), PREC.MULTIPLICATIVE],
        [kw('as'), PREC.MULTIPLICATIVE],
        [$.not_in, PREC.MULTIPLICATIVE],
        ['+', PREC.ADDITIVE],
        ['-', PREC.ADDITIVE],
        [kw('or'), PREC.ADDITIVE],
        [kw('xor'), PREC.ADDITIVE],
        ['=', PREC.RELATIONAL],
        ['<>', PREC.RELATIONAL],
        ['<', PREC.RELATIONAL],
        ['>', PREC.RELATIONAL],
        ['<=', PREC.RELATIONAL],
        ['>=', PREC.RELATIONAL],
        [kw('in'), PREC.RELATIONAL],
        [kw('is'), PREC.RELATIONAL],
      ];

      return choice(...table.map(([operator, precedence]) =>
        prec.left(precedence, seq(
          field('left', $.expression),
          field('operator', operator),
          field('right', $.expression),
        ))
      ));
    },

    call_expression: $ => prec(PREC.CALL, seq(
      field('function', choice($.lvalue_expression, $.parenthesized_expression)),
      $.argument_list,
    )),

    argument_list: $ => seq(
      '(',
      commaSep($.expression),
      ')'
    ),

    const_array_constructor_expression: $ => seq(
      '(',
      choice(
        sep($.expression, ','),
        sep1($.labeled_value, ';')
      ),
      ')'
    ),

    integer_literal: _ => token(choice(
      /[0-9]+/,           // decimal
      /\$[0-9a-fA-F]+/,  // hex
      /%[01]+/,           // binary
    )),

    float_literal: $ => token(choice(
      /[0-9]+\.[0-9]+([eE][+-]?[0-9]+)?/,  // 3.14, 1.5e10
      /[0-9]+[eE][+-]?[0-9]+/,             // 1e10
    )),

    string_literal: _ => token(seq(
      '\'',
      repeat(choice(
        /[^'\r\n]/,
        '\'\'',
      )),
      '\'',
    )),

    compound_string_literal: $ => repeat1(choice(
      $.string_literal,
      $.char_literal,
    )),

    //#endregion
    _reserved_name: $ => choice(
      $._reserved_identifier,
      alias($._reserved_generic_name, $.generic_name)
    ),

    _name: $ => choice(
      $.qualified_name,
      $._simple_name,
    ),

    member_access_expression: $ => prec(PREC.DOT, seq(
      field('expression', choice($.parenthesized_expression, $.lvalue_expression, $.literal)),
      '.',
      field('name', $._reserved_name)),
    ),

    identifier: $ =>  /[&\p{L}_][&\p{L}\p{Nd}_]*/u,
    _identifier: $ => choice(
      $.identifier,
      kw('string')
    ),

    boolean_literal: _ => token(prec(1, /true|false/i)),
