test/corpus/statement.txt
================================================================================
Variable declaration statement
================================================================================
program Foo;
begin
  var x: Integer;
  var y: SomeType := 3;
  var z := 10;
  var a, b : Integer
end.
--------------------------------------------------------------------------------

(source_file
  (runnable_file
    (file_header
      name: (identifier))
    body: (block_statement
      (variable_declaration_statement
        (variable_declarator
          name: (identifier))
        type: (identifier))
      (variable_declaration_statement
        (variable_declarator
          name: (identifier))
        type: (identifier)
        initial_value: (integer_literal))
      (variable_declaration_statement
        (variable_declarator
          name: (identifier))
        initial_value: (integer_literal))
      (variable_declaration_statement
        (variable_declarator
          name: (identifier))
        (variable_declarator
          name: (identifier))
        type: (identifier)))))

================================================================================
Empty block statement in program
================================================================================
program Foo;
begin
end.
--------------------------------------------------------------------------------

(source_file
  (runnable_file
    (file_header
      name: (identifier))
    body: (block_statement)))

================================================================================
Nested block statement
================================================================================
program Foo;
begin
  begin
  end;
end.
--------------------------------------------------------------------------------

(source_file
  (runnable_file
    (file_header
      name: (identifier))
    body: (block_statement
      (block_statement))))

================================================================================
Multiple nested block statements
================================================================================
program Foo;
begin
  begin
  end;
  begin
  end;
end.
--------------------------------------------------------------------------------

(source_file
  (runnable_file
    (file_header
      name: (identifier))
    body: (block_statement
      (block_statement)
      (block_statement))))

================================================================================
Simple assignment
================================================================================
program Foo;
begin
  x := 42
end.
--------------------------------------------------------------------------------

(source_file
  (runnable_file
    (file_header
      name: (identifier))
    body: (block_statement
      (assignment_statement
        left: (identifier)
        right: (integer_literal)))))

================================================================================
For loop
================================================================================
program Foo;
begin
  for i := 1 to 10 do
    x := 1;
  for var i: Integer := 1 downto 10 do
    x := 1;
end.
--------------------------------------------------------------------------------

(source_file
  (runnable_file
    (file_header
      name: (identifier))
    body: (block_statement
      (for_numeric_statement
        variable: (identifier)
        initial_value: (integer_literal)
        final_value: (integer_literal)
        body: (assignment_statement
          left: (identifier)
          right: (integer_literal)))
      (for_numeric_statement
        variable: (variable_declaration
          (variable_declarator
            name: (identifier))
          type: (identifier))
        initial_value: (integer_literal)
        final_value: (integer_literal)
        body: (assignment_statement
          left: (identifier)
          right: (integer_literal))))))

================================================================================
For each
================================================================================
program Foo;
begin
  for item in Collection do
    x := 1;
  for var item : Integer in Collection do
    x := 1;
end.
--------------------------------------------------------------------------------

(source_file
  (runnable_file
    (file_header
      name: (identifier))
    body: (block_statement
      (for_each_statement
        variable: (identifier)
        collection: (identifier)
        body: (assignment_statement
          left: (identifier)
          right: (integer_literal)))
      (for_each_statement
        variable: (variable_declaration
          (variable_declarator
            name: (identifier))
          type: (identifier))
        collection: (identifier)
        body: (assignment_statement
          left: (identifier)
          right: (integer_literal))))))

================================================================================
While loop
================================================================================
program Foo;
begin
  while x > 0 do
    x := 1;
end.
--------------------------------------------------------------------------------

(source_file
  (runnable_file
    (file_header
      name: (identifier))
    body: (block_statement
      (while_statement
        condition: (binary_expression
          left: (identifier)
          right: (integer_literal))
        body: (assignment_statement
          left: (identifier)
          right: (integer_literal))))))

================================================================================
Repeat until loop
================================================================================

program Foo;
begin
repeat
  x := 1;
until x > 0;
end.
--------------------------------------------------------------------------------

(source_file
  (runnable_file
    (file_header
      name: (identifier))
    body: (block_statement
      (repeat_statement
        (assignment_statement
          left: (identifier)
          right: (integer_literal))
        condition: (binary_expression
          left: (identifier)
          right: (integer_literal))))))

================================================================================
If statement - no else
================================================================================
program Foo;
begin
  if x > 0 then
    x := 1;
end.
--------------------------------------------------------------------------------

(source_file
  (runnable_file
    (file_header
      name: (identifier))
    body: (block_statement
      (if_statement
        condition: (binary_expression
          left: (identifier)
          right: (integer_literal))
        then: (assignment_statement
          left: (identifier)
          right: (integer_literal))))))

================================================================================
If else statement
================================================================================
program Foo;
begin
  if x > 0 then
    x := 1
  else
    x := 0;
end.
--------------------------------------------------------------------------------

(source_file
  (runnable_file
    (file_header
      name: (identifier))
    body: (block_statement
      (if_statement
        condition: (binary_expression
          left: (identifier)
          right: (integer_literal))
        then: (assignment_statement
          left: (identifier)
          right: (integer_literal))
        else: (assignment_statement
          left: (identifier)
          right: (integer_literal))))))

================================================================================
Case statement - literals and range
================================================================================
program Foo;
begin
  case x of
    1: x := 1;
    2, 3: x := 2;
    4..6: x := 3;
  end;
end.
--------------------------------------------------------------------------------

(source_file
  (runnable_file
    (file_header
      name: (identifier))
    body: (block_statement
      (case_statement
        value: (identifier)
        (case_branch
          pattern: (case_pattern
            (integer_literal))
          body: (assignment_statement
            left: (identifier)
            right: (integer_literal)))
        (case_branch
          pattern: (case_pattern
            (integer_literal))
          pattern: (case_pattern
            (integer_literal))
          body: (assignment_statement
            left: (identifier)
            right: (integer_literal)))
        (case_branch
          pattern: (case_pattern
            (set_range
              intial: (integer_literal)
              final: (integer_literal)))
          body: (assignment_statement
            left: (identifier)
            right: (integer_literal)))))))

================================================================================
Unary expression
================================================================================
program Foo;
begin
  x := -1;
  x := -x;
  x := not true;
  x := not (x > 0);
end.
--------------------------------------------------------------------------------

(source_file
  (runnable_file
    (file_header
      name: (identifier))
    body: (block_statement
      (assignment_statement
        left: (identifier)
        right: (unary_expression
          operand: (integer_literal)))
      (assignment_statement
        left: (identifier)
        right: (unary_expression
          operand: (identifier)))
      (assignment_statement
        left: (identifier)
        right: (unary_expression
          operand: (boolean_literal)))
      (assignment_statement
        left: (identifier)
        right: (unary_expression
          operand: (const_array_constructor_expression
            (binary_expression
              left: (identifier)
              right: (integer_literal))))))))

================================================================================
Try finally
================================================================================
program Foo;
begin
  try
    x := 1;
  finally
    x := 0;
  end;
end.
--------------------------------------------------------------------------------

(source_file
  (runnable_file
    (file_header
      name: (identifier))
    body: (block_statement
      (try_finally_statement
        (try_statements
          (assignment_statement
            left: (identifier)
            right: (integer_literal)))
        (finally_statements
          (assignment_statement
            left: (identifier)
            right: (integer_literal)))))))

================================================================================
Try except - typed handlers with else
================================================================================
program Foo;
begin
  try
    x := 1;
  except
    on E: EArgumentException do x := 2;
    on EException do x := 3;
  else
    x := 0;
  end;
end.
--------------------------------------------------------------------------------

(source_file
  (runnable_file
    (file_header
      name: (identifier))
    body: (block_statement
      (try_except_statement
        (try_statements
          (assignment_statement
            left: (identifier)
            right: (integer_literal)))
        (exception_handler
          variable: (identifier)
          type: (identifier)
          body: (assignment_statement
            left: (identifier)
            right: (integer_literal)))
        (exception_handler
          type: (identifier)
          body: (assignment_statement
            left: (identifier)
            right: (integer_literal)))
        (except_else_statements
          (assignment_statement
            left: (identifier)
            right: (integer_literal)))))))

================================================================================
Break, continue, inherited, exit statements
================================================================================
program Foo;
begin
  inherited;
  while true do
  begin
    break;
    continue
  end;
  exit;
  exit(True);
end.
--------------------------------------------------------------------------------

(source_file
  (runnable_file
    (file_header
      name: (identifier))
    body: (block_statement
      (inherited_statement)
      (while_statement
        condition: (boolean_literal)
        body: (block_statement
          (break_statement)
          (continue_statement)))
      (exit_statement)
      (exit_statement
        (argument_list
          (boolean_literal))))))

================================================================================
Raise statement
================================================================================
program Foo;
begin
  raise Exception.Create('error');
  raise EInvalidOperation.Create('invalid')
end.
--------------------------------------------------------------------------------

(source_file
  (runnable_file
    (file_header
      name: (identifier))
    body: (block_statement
      (raise_statement
        (call_expression
          function: (member_access_expression
            expression: (identifier)
            name: (identifier))
          (argument_list
            (compound_string_literal
              (string_literal)))))
      (raise_statement
        (call_expression
          function: (member_access_expression
            expression: (identifier)
            name: (identifier))
          (argument_list
            (compound_string_literal
              (string_literal))))))))

================================================================================
With statement
================================================================================
program Foo;

begin
  with SomeValue.A() do
    a := 4
end.
--------------------------------------------------------------------------------

(source_file
  (runnable_file
    (file_header
      (identifier))
    (block_statement
      (with_statement
        (call_expression
          (member_access_expression
            (identifier)
            (identifier))
          (argument_list))
        (assignment_statement
          (identifier)
          (integer_literal))))))
