test/corpus/top-level-statement.txt
================================================================================
Program
================================================================================
program Foo;
begin
end.
--------------------------------------------------------------------------------

(source_file
  (runnable_file
    (file_header
      name: (identifier))
    body: (block_statement)))

================================================================================
Library
================================================================================
library Foo;
begin
end.
--------------------------------------------------------------------------------

(source_file
  (runnable_file
    (file_header
      name: (identifier))
    body: (block_statement)))

================================================================================
Unit - minimal (no initialization or finalization)
================================================================================
unit Foo;
interface
implementation
end.
--------------------------------------------------------------------------------

(source_file
  (unit_file
    (file_header
      name: (identifier))
    (section)
    (section)))

================================================================================
Unit - with initialization
================================================================================
unit Foo;
interface
implementation
initialization
end.
--------------------------------------------------------------------------------

(source_file
  (unit_file
    (file_header
      name: (identifier))
    (section)
    (section)
    (section)))

================================================================================
Unit - with initialization and finalization
================================================================================
unit Foo;
interface
implementation
initialization
finalization
end.
--------------------------------------------------------------------------------

(source_file
  (unit_file
    (file_header
      name: (identifier))
    (section)
    (section)
    (section)
    (section)))

================================================================================
Initialization with statements
================================================================================
unit Foo;
interface
implementation
initialization
  x := 42;
  y := 'hello'
finalization
  x := 0;
  y := 0.4
end.
--------------------------------------------------------------------------------

(source_file
  (unit_file
    (file_header
      name: (identifier))
    (section)
    (section)
    (section
      (assignment_statement
        left: (identifier)
        right: (integer_literal))
      (assignment_statement
        left: (identifier)
        right: (compound_string_literal
          (string_literal))))
    (section
      (assignment_statement
        left: (identifier)
        right: (integer_literal))
      (assignment_statement
        left: (identifier)
        right: (float_literal)))))

================================================================================
Var declaration section
================================================================================
program Foo;
var 
  x, y, z: Integer;
  w: Boolean;
begin
end.
--------------------------------------------------------------------------------

(source_file
  (runnable_file
    (file_header
      name: (identifier))
    (declaration_section
      (global_declaration
        (identifier)
        (identifier)
        (identifier)
        type: (identifier))
      (global_declaration
        (identifier)
        type: (identifier)))
    body: (block_statement)))

================================================================================
Const declaration section
================================================================================
program Foo;
const
  x = 42;
  y: Boolean = True;
  z = 'hello';
  w: Integer = 7;
begin
end.
--------------------------------------------------------------------------------

(source_file
  (runnable_file
    (file_header
      name: (identifier))
    (declaration_section
      (global_declaration
        (identifier)
        (integer_literal))
      (global_declaration
        (identifier)
        type: (identifier)
        (boolean_literal))
      (global_declaration
        (identifier)
        (compound_string_literal
          (string_literal)))
      (global_declaration
        (identifier)
        type: (identifier)
        (integer_literal)))
    body: (block_statement)))

================================================================================
Resourcestring declaration section
================================================================================
program Foo;

resourcestring
  RS_String1 = 'Some string with '' in it';
  RS_String2 = 'Some string with %s in it';

begin
end.
--------------------------------------------------------------------------------

(source_file
  (runnable_file
    (file_header
      name: (identifier))
    (declaration_section
      (global_declaration
        (identifier)
        (compound_string_literal
          (string_literal)))
      (global_declaration
        (identifier)
        (compound_string_literal
          (string_literal))))
    body: (block_statement)))
